[package]
name = "droplet"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "fs",
    "signal",
] }
async-tar = "0.4.2"
futures-util = { version = "0.3", features = ["io"] }
axum = { version = "~0.4.8", default-features = false, features = ["http1"] }
tracing = "~0.1.31"
tracing-subscriber = { version = "~0.3.9" }
tower = { version = "~0.4.12", features = ["limit", "timeout"] }
tower-http = { version = "~0.2.5", features = ["trace", "auth"] }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "abort"
rpath = false
